# IntelligenceImageViewer

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: ci.yml
config/: config.yaml
plugins/hsv/: hsv_plugin.cpp  hsv_plugin.h
src/: ai_plugin_interface.h  ai_plugin_manager.cpp  ai_plugin_manager.h  main.cpp
